; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_soc_camera.c_default_cropcap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_soc_camera.c_default_cropcap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soc_camera_device = type { i32 }
%struct.v4l2_cropcap = type { i32 }
%struct.v4l2_subdev = type { i32 }

@video = common dso_local global i32 0, align 4
@cropcap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.soc_camera_device*, %struct.v4l2_cropcap*)* @default_cropcap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @default_cropcap(%struct.soc_camera_device* %0, %struct.v4l2_cropcap* %1) #0 {
  %3 = alloca %struct.soc_camera_device*, align 8
  %4 = alloca %struct.v4l2_cropcap*, align 8
  %5 = alloca %struct.v4l2_subdev*, align 8
  store %struct.soc_camera_device* %0, %struct.soc_camera_device** %3, align 8
  store %struct.v4l2_cropcap* %1, %struct.v4l2_cropcap** %4, align 8
  %6 = load %struct.soc_camera_device*, %struct.soc_camera_device** %3, align 8
  %7 = call %struct.v4l2_subdev* @soc_camera_to_subdev(%struct.soc_camera_device* %6)
  store %struct.v4l2_subdev* %7, %struct.v4l2_subdev** %5, align 8
  %8 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %5, align 8
  %9 = load i32, i32* @video, align 4
  %10 = load i32, i32* @cropcap, align 4
  %11 = load %struct.v4l2_cropcap*, %struct.v4l2_cropcap** %4, align 8
  %12 = call i32 @v4l2_subdev_call(%struct.v4l2_subdev* %8, i32 %9, i32 %10, %struct.v4l2_cropcap* %11)
  ret i32 %12
}

declare dso_local %struct.v4l2_subdev* @soc_camera_to_subdev(%struct.soc_camera_device*) #1

declare dso_local i32 @v4l2_subdev_call(%struct.v4l2_subdev*, i32, i32, %struct.v4l2_cropcap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
